# aarch64-air-lifter

./: .gitignore  Cargo.toml  Justfile  README.md  a.txt  build.rs
.github/workflows/: check.yaml
benchmarks/scripts/: count_instruction_frequency.py
helper/: hexcode-converter.py
src/: lib.rs
src/arm64/: helper.rs  label_resolver.rs  lifter.rs  mod.rs
src/arm64/lifter/: conditions.rs  disassembler.rs  flags.rs  insts.rs  operands.rs  regs.rs
tests/: README.md  abs_simple.rs  adc_simple.rs  adcs_simple.rs  add_simple.rs  adds_simple.rs  adr_simple.rs  b-cond_simple.rs  b_simple.rs  bfm_simple.rs  csinc_simple.rs  label_resolver_simple.rs  mod.rs
tests/common/: lib.rs  simple_variable_map.rs
tests/completeness/: exclusive_simd_instructions.rs  inclusive_simd_instructions.rs  invalidate_regs.rs  missing_instructions.rs  mod.rs
tests/label_resolver/: label_resolver_simple.rs  mod.rs
tests/lifter/: adc.rs  adc_simple.rs  adcs.rs  add.rs  add_simple.rs  adds.rs  adr.rs  adr_simple.rs  adrp.rs  adrp_simple.rs  and.rs  and_simple.rs  ands.rs  asr_simple.rs  asrv.rs  asrv_simple.rs  b.rs  b_simple.rs  bcc.rs  bfm.rs  bic.rs  bic_simple.rs  bl.rs  bl_simple.rs  blr.rs  br.rs  cas_simple.rs  cbnz.rs  cbz.rs  cbz_simple.rs  ccmn.rs  ccmn_simple.rs  ccmp.rs  cls.rs  clz.rs  csel.rs  csel_simple.rs  csinc.rs  csinc_simple.rs  csinv.rs  (+72 more)
tests/lifter/insts/tests/: adc.yaml  adcs.yaml  add.yaml  adds.yaml  adr.yaml  adrp.yaml  and.yaml  ands.yaml  asrv.yaml  b.yaml  bcc.yaml  bfm.yaml  bic.yaml  bl.yaml  blr.yaml  br.yaml  cbnz.yaml  cbz.yaml  ccmn.yaml  ccmp.yaml  cls.yaml  clz.yaml  consecutive.yaml  csel.yaml  (+56 more)
tests/lifter/wasm/: call_fn.rs  load_simple.rs  mod.rs
