[package]
name = "aarch64-air-lifter"
version = "0.1.0"
edition = "2021"

[dependencies]
air = { workspace = true }
arch = { workspace = true }
elf = { workspace = true }
filecheck = { workspace = true }
pcc = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
sym = { workspace = true }
target-lexicon = { workspace = true }
thiserror = { workspace = true }
types = { workspace = true }
yaxpeax-arch = { workspace = true }
yaxpeax-arm = { workspace = true }

[build-dependencies]
prettier-please = { workspace = true }
quote = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = "0.9"
syn = { workspace = true }
